--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@alexartisan/react-navigation-tabs": "^1.1.5",
+    "@react-navigation/bottom-tabs": "^6.5.3",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/stack": "^6.3.11",
     "expo": "~47.0.12",
+    "expo-location": "^15.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-web": "~0.18.9",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
